# nightmare_assault

./: .env.example  .gitignore  .~lock.PRD.md#  ARCHITECTURE.md  CLAUDE.md  CONFIG_SETUP.md  Makefile  PRD.md  RUN.md  config.example.json  conftest.py  go.mod  go.sum  main.py  nightmare-assault-parallel-dev-plan.md  pyproject.toml  webview_app.py
.claude/: piper-voices-dir.txt
bmad-custom-src/: custom.yaml
config/: CONTRACT_FREEZE.md  config.example.json
core/: __init__.py  attractors.py  blackboard.py  constants.py  events.py  graph_invariants.py  models.py  orchestrator_loop.py  patch_validator.py  progress_bridge.py  progress_context.py  progress_kernel.py  progress_models.py  scene.py  scene_graph.py  signal.py
data/: opening_scene_graph.json
dev/: CONTRACTS.md  PARALLEL-PLAN.md  ROADMAP.md  ROLLBACK.md  SOURCES.md  STATUS.md  WORKFLOW.md  demo_config_ui.py
docs/: bmm-workflow-status.yaml  epics.md  player-sovereignty-principles.md  ux-design-specification.md
examples/: config_usage.go
nightmare-assault-design-fixed/: 00-overview.md  01-architecture.md  02-algorithms.md  03-agent-context.md  04-ui-ux.md  05-epic-list.md  06-frontend.md  07-data-contracts.md  08-engineering.md  09-revision-notes.md  10-progress-kernel.md  11-config-center.md  12-mvp-b.md  13-narrative-control-v2.md  14-runtime-hardgate.md  15-player-sovereignty.md  16-worldmodel.md  17-spatial-projection.md  18-player-surface.md  19-opening-variation.md  20-open-exploration-rc.md  README.md  architecture-reference.html  architecture.html
scripts/: download-audio.sh  package.sh
(+990 files in other folders)
